tests/base/invalid/If_CompileFail_1.whiley


int f(int z):
    if(z):
        return 1
    return 0
